feat: Add comprehensive competitor analysis and TW favicon
- Add competitor data migration scripts and API endpoints
- Implement detailed competitor vs Tokyo Weekender comparison
- Add CompetitorDetail page with keyword comparison table
- Update all dashboard pages to English
- Add Footer component with developer credit
- Implement TW favicon with blue background and white text
- Add keyword search functionality with filters
- Integrate NEON database for competitor data storage
- Add comprehensive competitor analysis features:
  * Top 100 keywords comparison per competitor
  * Position and traffic comparison
  * Opportunity scoring and status indicators
  * Intent classification display
  * Direct links to competitor and TW pages

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Tokyo Weekender Organic Growth Analysis Dashboard",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --config vite.config.ts",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
