fix: Resolve Vite proxy errors and PostCSS warnings
- Disable proxy in preview mode to prevent localhost:8000 connection errors
- Add 'type': 'module' to package.json to fix PostCSS warnings
- Prevent ECONNREFUSED errors in production environment
- Ensure mock data fallback works correctly without proxy interference

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tokyo-weekender-seo-dashboard",
   "version": "1.0.0",
   "description": "Tokyo Weekender Organic Growth Analysis Dashboard",
+  "type": "module",
   "scripts": {
     "dev": "vite --config vite.config.ts",
     "build": "tsc && vite build",
