fix: Completely disable Vite proxy in production environment
- Add environment-based configuration to disable proxy in production
- Add render.yaml for Render.com deployment configuration
- Update package.json scripts to explicitly use production mode
- Set NODE_ENV=production environment variable
- Prevent ECONNREFUSED errors by ensuring proxy is disabled in production
- Add static site deployment configuration for Render.com

--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
 services:
   - type: web
     name: tokyo-weekender-seo-dashboard
-    env: node
+    env: static
     plan: free
     buildCommand: npm install && npm run build
-    startCommand: npm run start
+    staticPublishPath: ./frontend/dist
     envVars:
       - key: NODE_ENV
         value: production
-      - key: PORT
-        value: 10000
+      - key: VITE_NODE_ENV
+        value: production
