--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite --config vite.config.ts",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "start": "vite preview --host 0.0.0.0 --port $PORT"
+    "preview": "vite preview --mode production",
+    "start": "vite preview --host 0.0.0.0 --port $PORT --mode production"
   },
   "dependencies": {
     "react": "^18.2.0",
