fix: Enhanced Vite proxy disable with debug logging and explicit NODE_ENV
- Add debug logging to Vite config to track environment detection
- Add isPreview detection for Render.com preview mode
- Set explicit NODE_ENV=production in start script
- Enhance proxy disable logic for both production and preview modes
- Add console logging to help debug environment configuration issues

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --config vite.config.ts",
     "build": "tsc && vite build",
     "preview": "vite preview --mode production",
-    "start": "vite preview --host 0.0.0.0 --port $PORT --mode production"
+    "start": "NODE_ENV=production vite preview --host 0.0.0.0 --port $PORT --mode production"
   },
   "dependencies": {
     "react": "^18.2.0",
