--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "dev": "vite --config vite.config.ts",
     "build": "tsc && vite build",
+    "build:static": "cd frontend && npm run build",
     "preview": "vite preview --mode production",
-    "start": "NODE_ENV=production vite preview --host 0.0.0.0 --port $PORT --mode production"
+    "start": "NODE_ENV=production vite preview --host 0.0.0.0 --port $PORT --mode production",
+    "start:static": "npm run build && npx serve -s frontend/dist -l $PORT"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -19,7 +21,8 @@
     "d3": "^7.8.5",
     "lucide-react": "^0.294.0",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "serve": "^14.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
