--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: tokyo-weekender-seo-dashboard
     env: static
     plan: free
-    buildCommand: npm install && npm run build
+    buildCommand: cd frontend && npm install && npm run build
     staticPublishPath: ./frontend/dist
     envVars:
       - key: NODE_ENV
