--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --config vite.config.ts",
     "build": "tsc && vite build",
-    "build:static": "cd frontend && npm run build",
+    "build:static": "npm run build",
     "preview": "vite preview --mode production",
     "start": "NODE_ENV=production vite preview --host 0.0.0.0 --port $PORT --mode production",
     "start:static": "npm run build && npx serve -s frontend/dist -l $PORT"
