fix: Force static file serving with serve package
- Change start script to build and serve static files directly
- Switch from static site to Node.js web service in render.yaml
- Use npx serve to serve pre-built static files
- This eliminates Vite proxy completely by serving static files
- Ensures no proxy errors occur during runtime

--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
   - type: web
     name: tokyo-weekender-seo-dashboard
-    env: static
+    env: node
     plan: free
-    buildCommand: npm install && npm run build
-    staticPublishPath: ./frontend/dist
+    buildCommand: npm install
+    startCommand: npm run start
     envVars:
       - key: NODE_ENV
         value: production
