--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "build:static": "npm run build",
     "preview": "vite preview --mode production",
-    "start": "NODE_ENV=production vite preview --host 0.0.0.0 --port $PORT --mode production",
+    "start": "npm run build && npx serve -s frontend/dist -l $PORT",
     "start:static": "npm run build && npx serve -s frontend/dist -l $PORT"
   },
   "dependencies": {
