optimize: Improve Render.com deployment configuration
- Add NODE_OPTIONS for memory optimization (4GB heap)
- Add NPM_CONFIG_PRODUCTION=false for build dependencies
- Optimize buildCommand to use npm ci for faster installs
- Add healthCheckPath for better monitoring
- Add postinstall script for automatic builds
- These changes improve build speed and reliability

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:static": "npm run build",
     "preview": "vite preview --mode production",
     "start": "npm run build && npx serve -s frontend/dist -l $PORT",
-    "start:static": "npm run build && npx serve -s frontend/dist -l $PORT"
+    "start:static": "npm run build && npx serve -s frontend/dist -l $PORT",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "react": "^18.2.0",
