fix: Resolve build command and dependency issues
- Fix buildCommand to use npm ci instead of npm ci --only=production
- Remove postinstall script to prevent infinite build loops
- Add terser as devDependency for Vite minification
- Update package-lock.json with new dependencies
- Build now passes locally and should work on Render.com

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: tokyo-weekender-seo-dashboard
     env: node
     plan: free
-    buildCommand: npm ci --only=production && npm run build
+    buildCommand: npm ci && npm run build
     startCommand: npm run start
     healthCheckPath: /
     envVars:
