--- a/package.json
+++ b/package.json
@@ -9,30 +9,30 @@
     "build:static": "npm run build",
     "preview": "vite preview --mode production",
     "start": "npm run build && npx serve -s frontend/dist -l $PORT",
-    "start:static": "npm run build && npx serve -s frontend/dist -l $PORT",
-    "postinstall": "npm run build"
+    "start:static": "npm run build && npx serve -s frontend/dist -l $PORT"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
     "axios": "^1.6.0",
     "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0",
+    "clsx": "^2.0.0",
     "d3": "^7.8.5",
     "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
-    "serve": "^14.2.1"
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0",
+    "serve": "^14.2.1",
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
-    "@types/d3": "^7.4.3",
     "@vitejs/plugin-react": "^4.1.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
+    "terser": "^5.44.0",
     "typescript": "^5.2.2",
     "vite": "^4.5.0"
   }
