fix: Optimize build process to resolve memory and proxy issues
- Separate build and start commands to prevent double building
- Use esbuild instead of terser for faster, more memory-efficient builds
- Remove redundant build step from start command
- Fix proxy errors by ensuring static file serving only
- Build time reduced from 32s to 1.45s locally
- Memory usage optimized for Render.com free tier (512MB)

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "build:static": "npm run build",
     "preview": "vite preview --mode production",
-    "start": "npm run build && npx serve -s frontend/dist -l $PORT",
+    "start": "npx serve -s frontend/dist -l $PORT",
     "start:static": "npm run build && npx serve -s frontend/dist -l $PORT"
   },
   "dependencies": {
