--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     plan: free
     buildCommand: npm ci && npm run build
-    startCommand: npm run start
+    startCommand: npx serve -s frontend/dist -l $PORT
     healthCheckPath: /
     envVars:
       - key: NODE_ENV
