feat: Implement real Content Recommendations API with database integration
- Add comprehensive Content Recommendations API endpoint
- Implement new content recommendations logic based on competitor analysis
- Add content improvement recommendations for existing pages
- Create topic cluster analysis for content strategy
- Add helper methods for content type determination and priority calculation
- Integrate with actual database data (244,514 keywords)
- Update frontend to use real API for content recommendations
- Maintain fallback to mock data for other endpoints

Features:
- New Content Proposals: High-volume, medium-difficulty keywords from competitors
- Content Improvements: Existing pages with optimization potential
- Topic Clusters: Grouped content strategy recommendations
- Real-time data analysis from PostgreSQL database
- Intelligent content type and audience targeting

--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     plan: free
     buildCommand: npm ci && npm run build
-    startCommand: npx serve -s frontend/dist -l $PORT
+    startCommand: npx serve -s dist -l $PORT
     healthCheckPath: /
     envVars:
       - key: NODE_ENV
