--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "tsc && vite build",
     "build:static": "npm run build",
     "preview": "vite preview --mode production",
-    "start": "npx serve -s frontend/dist -l $PORT",
-    "start:static": "npm run build && npx serve -s frontend/dist -l $PORT"
+    "start": "npx serve -s dist -l $PORT",
+    "start:static": "npm run build && npx serve -s dist -l $PORT"
   },
   "dependencies": {
     "axios": "^1.6.0",
