Fix CORS and API issues - Update backend deployment config and add fallback mechanisms

--- a/env.example
+++ b/env.example
@@ -16,3 +16,6 @@ DEBUG=true
 # API Settings
 API_V1_STR=/api
 PROJECT_NAME=Tokyo Weekender SEO Dashboard
+
+# Render MCP Configuration
+RENDER_API_TOKEN=your-render-api-token-here
