--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build:static": "npm run build",
     "preview": "vite preview --mode production",
     "start": "npx serve -s dist -l $PORT",
-    "start:static": "npm run build && npx serve -s dist -l $PORT"
+    "start:static": "npm run build && npx serve -s dist -l $PORT",
+    "mcp:setup": "node scripts/mcp-setup.js",
+    "mcp:test": "node scripts/mcp-setup.js"
   },
   "dependencies": {
     "axios": "^1.6.0",
